--- a/docs/react/简介.md
+++ b/docs/react/简介.md
@@ -6,7 +6,7 @@
 
 `npm i -S react react-dom`
 
-`npm i babel-loader babel-preset-react -S`
+`npm i babel-loader babel-preset-react babel-plugin-import -S`
 
 ```js
 module: {
