--- a/docs/react/常见问题.md
+++ b/docs/react/常见问题.md
@@ -1,6 +1,11 @@
 # 常见问题
 
+## 如何调试React
+
 ## 引用antd首次打开速度太慢
+
+1. 按需加载
+1. 使用cdn
 
 ```js
 module.exports = {
@@ -18,6 +23,19 @@ module.exports = {
             },
             exclude: /node_modules/
         }]
+    },
+}
+```
+
+```js
+module.exports = {
+    mode: 'development',
+    devtool: 'inline-source-map',
+    externals: {
+        lodash: '_',
+        react: 'React',
+        'react-dom': 'ReactDOM',
+        antd: 'antd'
     },
 }
 ```
