--- a/docs/react/简介.md
+++ b/docs/react/简介.md
@@ -207,3 +207,107 @@ class LoggingButton extends React.Component {
   }
 }
 ```
+
+## Keys
+
+Keys可以在DOM中的某些元素被增加或删除的时候帮助React识别哪些元素发生了变化。因此你应当给数组中的每一个元素赋予一个确定的标识。
+
+元素的key只有在它和它的兄弟节点对比时才有意义。
+
+元素的key在他的兄弟元素之间应该唯一,不需要是全局唯一。
+
+```js
+function ListItem(props) {
+  // 对啦！这里不需要指定key:
+  return <li>{props.value}</li>;
+}
+
+function NumberList(props) {
+  const numbers = props.numbers;
+  const listItems = numbers.map((number) =>
+    // 又对啦！key应该在数组的上下文中被指定
+    <ListItem key={number.toString()}
+              value={number} />
+  );
+  return (
+    <ul>
+      {listItems}
+    </ul>
+  );
+}
+
+const numbers = [1, 2, 3, 4, 5];
+ReactDOM.render(
+  <NumberList numbers={numbers} />,
+  document.getElementById('root')
+);
+```
+
+## 表单
+
+### 受控组件
+
+使用受控组件要为数据可能发生变化的每一种方式编写一个事件处理程序，并通过一个组件来管理全部的状态。
+
+```js
+class NameForm extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {value: ''};
+  }
+
+  handleChange(event) {
+    this.setState({value: event.target.value});
+  }
+
+  handleSubmit(event) {
+    alert('A name was submitted: ' + this.state.value);
+    event.preventDefault();
+  }
+
+  render() {
+    return (
+      <form onSubmit={e=>this.handleSubmit(e)}>
+        <label>
+          Name:
+          <input type="text" value={this.state.value} onChange={e=>this.handleChange(e)} />
+        </label>
+        <input type="submit" value="Submit" />
+      </form>
+    );
+  }
+}
+```
+
+### 非受控组件
+
+在大多数情况下，我们推荐使用 受控组件 来实现表单。 
+
+在受控组件中，表单数据由 React 组件处理。如果让表单数据由 DOM 处理时，替代方案为使用非受控组件。
+
+使用 ref 从 DOM 获取表单值。
+
+```js
+class NameForm extends React.Component {
+  constructor(props) {
+    super(props);
+  }
+
+  handleSubmit(event) {
+    alert('A name was submitted: ' + this.input.value);
+    event.preventDefault();
+  }
+
+  render() {
+    return (
+      <form onSubmit={e=>this.handleSubmit(e)}>
+        <label>
+          Name:
+          <input type="text" ref={(input) => this.input = input} />
+        </label>
+        <input type="submit" value="Submit" />
+      </form>
+    );
+  }
+}
+```
