--- a/docs/react/简介.md
+++ b/docs/react/简介.md
@@ -117,6 +117,8 @@ function withdraw(account, amount) {
 
 所有的React组件必须像纯函数那样使用它们的props。
 
+无状态函数（stateless function）
+
 ## 状态(state)
 
 应用的界面是随时间动态变化的.
@@ -133,6 +135,8 @@ state可以在不违反上述规则的情况下，根据用户操作、网络响
 1. 组件可以选择将其状态作为属性传递给其子组件
 
 在 React 应用程序中，组件是有状态还是无状态 根据可能随时间而变化的组件。
+
+属性是公开的，状态是私有的。
 
 ## Event
 
@@ -311,3 +315,27 @@ class NameForm extends React.Component {
   }
 }
 ```
+
+## 组合
+
+React 推荐组件使用组合 而不是 继承的方式。
+
+1. 包含：`props.children`
+1. 特殊实例：
+
+```js
+function Dialog(props){
+  return (
+    <div>
+    {props.title}
+    </div>
+  )
+}
+
+function WelcomeDialog(){
+  return (
+    <Dialog title="welcome"/>
+  )
+}
+```
+
