--- a/docs/react/常见问题.md
+++ b/docs/react/常见问题.md
@@ -2,6 +2,32 @@
 
 ## 如何调试React
 
+## 引用antd区分环境
+
+```js
+import { DatePicker, LocaleProvider, Button, message, notification } from 'antd';
+
+let zhCN = null;
+if (process.env.NODE_ENV === 'production') {
+    let antd = require('antd'); // 生产环境
+    zhCN = antd.locales.zh_CN;
+} else {
+    zhCN = require('antd/lib/locale-provider/zh_CN'); // 开发环境
+}
+
+export default class App extends Component {
+    render() {
+        return (
+            <LocaleProvider locale={zhCN}>
+                <div>
+                    <DatePicker />
+                </div>
+            </LocaleProvider>
+        )
+    }
+}
+```
+
 ## 引用antd首次打开速度太慢
 
 1. 按需加载
