--- a/docs/redux/简介.md
+++ b/docs/redux/简介.md
@@ -34,4 +34,47 @@ const todoApp = combineReducers(reducers)
 
 ## 结合React
 
-todo
+组件分为`展示组件` 和 `容器组件`
+
+### 展示组件
+
+描述如何展示：负责UI样式的展示
+
+1. 数据来源：props
+1. 数据修改：通过props的回调函数
+1. 不直接使用redux
+
+### 容器组件
+
+描述如何运行：负责数据获取 和 状态更新
+
+1. 数据来源：redux state
+1. 数据修改：redux 派发action
+1. 直接使用redux
+
+
+import { Provider,connect } from 'react-redux'
+
+Provider：作为顶级组件，让所有容器组件(被connect过的组件)都可以访问 store，而不必显示地传递它。
+connect：`connect([mapStateToProps], [mapDispatchToProps], [mergeProps], [options])`
+
+1. `mapStateToProps(state, ownProps) : stateProps`：这个函数允许我们将 store 中的数据作为 props 绑定到组件上。
+1. `mapDispatchToProps(dispatch, ownProps): dispatchProps`：这个函数将 action 作为props 绑定到组件上。
+
+当 state 变化，或者 ownProps 变化的时候， mapStateToProps 都会被调用，计算出一个新的 stateProps
+
+
+```js
+import {bindActionCreators} from 'redux';
+
+const mapDispatchToProps = (dispatch, ownProps) => {
+  return bindActionCreators({
+    increase: action.increase,
+    decrease: action.decrease
+  });
+}
+```
+
+## 中间件
+
+redux-thunk、redux-actions
