--- a/docs/redux/简介.md
+++ b/docs/redux/简介.md
@@ -78,3 +78,10 @@ const mapDispatchToProps = (dispatch, ownProps) => {
 ## 中间件
 
 redux-thunk、redux-actions
+
+`npm i redux-thunk -S`
+
+
+通过使用指定的 middleware，action 创建函数除了返回 action 对象外还可以返回函数。
+
+当 action 创建函数返回函数时，这个函数会被 Redux Thunk middleware 执行。这个函数并不需要保持纯净；它还可以带有副作用，包括执行异步 API 请求。
