--- a/docs/redux/简介.md
+++ b/docs/redux/简介.md
@@ -52,7 +52,6 @@ const todoApp = combineReducers(reducers)
 1. 数据修改：redux 派发action
 1. 直接使用redux
 
-
 import { Provider,connect } from 'react-redux'
 
 Provider：作为顶级组件，让所有容器组件(被connect过的组件)都可以访问 store，而不必显示地传递它。
@@ -62,7 +61,6 @@ connect：`connect([mapStateToProps], [mapDispatchToProps], [mergeProps], [optio
 1. `mapDispatchToProps(dispatch, ownProps): dispatchProps`：这个函数将 action 作为props 绑定到组件上。
 
 当 state 变化，或者 ownProps 变化的时候， mapStateToProps 都会被调用，计算出一个新的 stateProps
-
 
 ```js
 import {bindActionCreators} from 'redux';
@@ -77,10 +75,94 @@ const mapDispatchToProps = (dispatch, ownProps) => {
 
 ## 中间件
 
-redux-thunk、redux-actions
+redux 提供了类似后端 Express 的中间件概念
+将 action -> reducer 变为 action -> middlewares -> reducer
+通过 override redux的store.dispatch()：
+
+```js
+let next = store.dispatch;
+store.dispatch = function dispatchAndLog(action) {
+  console.log('dispatching', action);
+  next(action);
+  console.log('next state', store.getState());
+}
+```
+
+使用中间件：
+
+1. 使用`createStore(reducer, enhancer)` 或 `createStore(reducer, preloadedState, enhancer)`
+1. applyMiddleware的参数为中间件，某些中间件有顺序要求如：logger
+
+```js
+import { createStore, applyMiddleware } from 'redux'
+import createLogger from 'redux-logger'
+import rootReducer from './reducers'
+
+const loggerMiddleware = createLogger()
+const initialState = {}
+
+return createStore(
+    rootReducer,
+    initialState,
+    applyMiddleware(
+      loggerMiddleware
+    )
+  )
+```
+
+applyMiddleware的源码：
+
+```js
+export default function applyMiddleware(...middlewares) {
+  return (createStore) => (reducer, preloadedState, enhancer) => {
+    var store = createStore(reducer, preloadedState, enhancer);
+    var dispatch = store.dispatch;
+    var chain = [];
+
+    var middlewareAPI = {
+      getState: store.getState,
+      dispatch: (action) => dispatch(action)
+    };
+    chain = middlewares.map(middleware => middleware(middlewareAPI));
+    dispatch = compose(...chain)(store.dispatch);
+
+    return {...store, dispatch}
+  }
+}
+```
+
+1. 同步操作需要1种Action，异步操作需要3种Action(开始、成功、失败)
+1. 异步操作有2种写法
+1. 异步操作的state结构调整
+
+action写法：
+
+```js
+// 写法一：名称相同，参数不同
+{ type: 'FETCH_POSTS' }
+{ type: 'FETCH_POSTS', status: 'error', error: 'Oops' }
+{ type: 'FETCH_POSTS', status: 'success', response: { ... } }
+
+// 写法二：名称不同
+{ type: 'FETCH_POSTS_REQUEST' }
+{ type: 'FETCH_POSTS_FAILURE', error: 'Oops' }
+{ type: 'FETCH_POSTS_SUCCESS', response: { ... } }
+```
+
+state结构：
+
+```js
+let state = {
+  // ...
+  isFetching: true,// 正在获取数据
+  didInvalidate: true,// 是否过期
+  lastUpdated: 'xxxxxxx'// 上次更新时间
+};
+```
+
+redux-logger redux-thunk、redux-actions
 
 `npm i redux-thunk -S`
-
 
 通过使用指定的 middleware，action 创建函数除了返回 action 对象外还可以返回函数。
 
