--- a/docs/redux/简介.md
+++ b/docs/redux/简介.md
@@ -75,9 +75,9 @@ const mapDispatchToProps = (dispatch, ownProps) => {
 
 ## 中间件
 
-redux 提供了类似后端 Express 的中间件概念
-将 action -> reducer 变为 action -> middlewares -> reducer
-通过 override redux的store.dispatch()：
+redux 提供了类似后端 Express 的中间件概念。
+最适合扩展的是redux中的 store.dispatch 方法，中间件实际就是通过 override redux的store.dispatch() 完成
+将 action -> reducer 变为 action -> middlewares -> reducer 如：
 
 ```js
 let next = store.dispatch;
@@ -85,6 +85,29 @@ store.dispatch = function dispatchAndLog(action) {
   console.log('dispatching', action);
   next(action);
   console.log('next state', store.getState());
+}
+```
+
+redux提供了 applyMiddleware 方法便于添加中间件
+
+applyMiddleware的源码：
+
+```js
+export default function applyMiddleware(...middlewares) {
+  return (createStore) => (reducer, preloadedState, enhancer) => {
+    var store = createStore(reducer, preloadedState, enhancer);
+    var dispatch = store.dispatch;
+    var chain = [];
+
+    var middlewareAPI = {
+      getState: store.getState,
+      dispatch: (action) => dispatch(action)
+    };
+    chain = middlewares.map(middleware => middleware(middlewareAPI));
+    dispatch = compose(...chain)(store.dispatch);
+
+    return {...store, dispatch}
+  }
 }
 ```
 
@@ -110,29 +133,8 @@ return createStore(
   )
 ```
 
-applyMiddleware的源码：
-
-```js
-export default function applyMiddleware(...middlewares) {
-  return (createStore) => (reducer, preloadedState, enhancer) => {
-    var store = createStore(reducer, preloadedState, enhancer);
-    var dispatch = store.dispatch;
-    var chain = [];
-
-    var middlewareAPI = {
-      getState: store.getState,
-      dispatch: (action) => dispatch(action)
-    };
-    chain = middlewares.map(middleware => middleware(middlewareAPI));
-    dispatch = compose(...chain)(store.dispatch);
-
-    return {...store, dispatch}
-  }
-}
-```
-
 1. 同步操作需要1种Action，异步操作需要3种Action(开始、成功、失败)
-1. 异步操作有2种写法
+1. 异步操作有2种写法(3种type 或者 添加erro 和 response字段)
 1. 异步操作的state结构调整
 
 action写法：
